<resources>
    <string name="app_name">Quiz</string>
    <string name="exit">Salir</string>
    <string name="play">Jugar</string>
    <string name="profile">Perfil</string>
    <string name="settings">Ajustes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="match">Partida</string>
    <string name="music">Música</string>
    <string name="effects">Efectos</string>
    <string name="difficulty">Dificultad</string>
    <string name="save">Guardar</string>
    <string name="back">Atrás</string>
    <string name="play2">¡Jugar!</string>
    <string name="playChooseCat">Selecciona una categoría para jugar:</string>
    <string name="videogameHistory">Historia de los videojuegos</string>
    <string name="videogamesCompany">Empresas de videojuegos</string>
    <string name="generalCulture">Cultura general</string>
    <string name="videogamesSaga">Sagas de videojuegos</string>
    <string name="endMatch">Fin de la partida</string>
    <string name="mainMenu">Menú principal</string>
    <string name="playAgain">¡Volver a jugar!</string>
    <string name="time">Tiempo</string>
    <string name="mistakes">Respuestas incorrectas</string>
    <string name="puntuation">Puntuación</string>
    <string name="hits">Respuestas correctas</string>
    <string name="question">Pregunta</string>
    <string name="option1">Opción 1</string>
    <string name="option2">Opción 2</string>
    <string name="option3">Opción 3</string>
    <string name="option4">Opción 4</string>
    <string name="answer">Respuesta</string>
    <string name="falseW">Falso</string>
    <string name="trueW">Verdadero</string>
    <string name="confirm">Confirmar</string>
    <string name="option5">Opción 5</string>
    <string name="option6">Opción 6</string>
    <string name="delete">Borrar</string>
    <string name="ranking">Ranking</string>
</resources>