<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.questions.MultipleChoiceFragment" >

    <TextView
        android:id="@+id/txtVw_mc_q"
        android:layout_width="295dp"
        android:layout_height="175dp"
        android:layout_marginTop="124dp"
        android:fontFamily="@font/asdonauts_font_family"
        android:text="@string/question"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="295dp"
        android:layout_height="342dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVw_mc_q"
        app:layout_constraintVertical_bias="0.168">

        <CheckBox
            android:id="@+id/chkBox_mc_o1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/asdonauts_font_family"
            android:text="@string/option1"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chkBox_mc_o2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/asdonauts_font_family"
            android:text="@string/option2"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chkBox_mc_o3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/asdonauts_font_family"
            android:text="@string/option3"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chkBox_mc_o4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/asdonauts_font_family"
            android:text="@string/option4"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chkBox_mc_o5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/asdonauts_font_family"
            android:text="@string/option5"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chk_mc_o6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/asdonauts_font_family"
            android:text="@string/option6"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btt_mc_conf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/asdonauts_font_family"
            android:text="@string/confirm"
            android:textSize="16sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>