<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.questions.TrueFalseFragment" >

    <TextView
        android:id="@+id/txtVw_tf_q"
        android:layout_width="295dp"
        android:layout_height="175dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/asdonauts_font_family"
        android:text="@string/question"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="295dp"
        android:layout_height="342dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVw_tf_q"
        app:layout_constraintVertical_bias="0.096">

        <ToggleButton
            android:id="@+id/togBtt_tf"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:fontFamily="@font/asdonauts_font_family"
            android:text="@string/answer"
            android:textOff="@string/falseW"
            android:textOn="@string/trueW"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btt_tf_conf"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/asdonauts_font_family"
            android:text="@string/confirm"
            android:textSize="20sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>