<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameCategoryActivity">

    <TextView
        android:id="@+id/txtVw_SelCat"
        android:layout_width="322dp"
        android:layout_height="183dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="44dp"
        android:fontFamily="@font/asdonauts_font_family"
        android:text="@string/playChooseCat"
        android:textAlignment="center"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@id/btt_PlayGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btt_PlayGame"
        android:layout_width="195dp"
        android:layout_height="68dp"
        android:layout_marginBottom="112dp"
        android:fontFamily="@font/asdonauts_font_family"
        android:text="@string/play2"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btt_Back2"
        android:layout_width="106dp"
        android:layout_height="59dp"
        android:fontFamily="@font/asdonauts_font_family"
        android:text="@string/back"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btt_PlayGame" />

    <RadioGroup
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btt_PlayGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVw_SelCat">

        <RadioButton
            android:id="@+id/rb_vidHis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/asdonauts_font_family"
            android:text="@string/videogameHistory"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rb_vidComp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/asdonauts_font_family"
            android:text="@string/videogamesCompany"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rb_genCul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/asdonauts_font_family"
            android:text="@string/generalCulture"
            android:textSize="24sp" />

        <RadioButton
            android:id="@+id/rb_vidSag"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/asdonauts_font_family"
            android:text="@string/videogamesSaga"
            android:textSize="24sp" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>