<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.questions.NormalQuestionFragment">

    <TextView
        android:id="@+id/txtVw_nq_q"
        android:layout_width="295dp"
        android:layout_height="175dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/asdonauts_font_family"
        android:text="@string/question"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="295dp"
        android:layout_height="342dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtVw_nq_q"
        app:layout_constraintVertical_bias="0.081">

        <Button
            android:id="@+id/btt_nq_o1"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:fontFamily="@font/asdonauts_font_family"
            android:text="@string/option1"
            android:textSize="24sp"
            tools:layout_editor_absoluteX="57dp"
            tools:layout_editor_absoluteY="219dp" />

        <Button
            android:id="@+id/btt_nq_o2"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:fontFamily="@font/asdonauts_font_family"
            android:text="@string/option2"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="57dp"
            tools:layout_editor_absoluteY="291dp" />

        <Button
            android:id="@+id/btt_nq_o3"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:fontFamily="@font/asdonauts_font_family"
            android:text="@string/option3"
            android:textSize="20"
            tools:layout_editor_absoluteX="57dp"
            tools:layout_editor_absoluteY="363dp" />

        <Button
            android:id="@+id/btt_nq_o4"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:fontFamily="@font/asdonauts_font_family"
            android:text="@string/option4"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="57dp"
            tools:layout_editor_absoluteY="435dp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>